test/files/pos/t12407/A.java
public class A {
  public interface I {
    I[] getArray();
  }

  public interface J extends I {
    @Override
    J[] getArray();
  }
}
